feat: Real Solution in Notebook

--- a/compute_odes.ipynb
+++ b/compute_odes.ipynb
@@ -40,7 +40,7 @@
     "plt.rcParams['figure.figsize'] = (6, 4)\n",
     "\n",
     "# Define custom color palette\n",
-    "palette = sns.color_palette(\"viridis\", 12)\n"
+    "palette = sns.color_palette(\"viridis\", 12)"
    ]
   },
   {
@@ -48,6 +48,13 @@
    "metadata": {},
    "source": [
     "## **(2) Solving Ordinary Differential Equations**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **First Equation**"
    ]
   },
   {
@@ -61,7 +68,28 @@
     "    return 22 * np.exp(x / 5) - 5 * x - 25\n",
     "\n",
     "def df(x, y):\n",
-    "    return (22 / 5) * np.exp(x / 5) - 5\n"
+    "    return (22 / 5) * np.exp(x / 5) - 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solución -->**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Second Equation**"
    ]
   },
   {
@@ -80,6 +108,28 @@
     "# Actual solution\n",
     "def G(x):\n",
     "    return np.cos(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solución -->**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{dy}{dt} = -\\sin(t) \\\\\n",
+    "\\int dy = \\int -\\sin(t) \\, dt \\\\\n",
+    "y = \\cos(t) + C \\\\\n",
+    "y(0) = 1 \\\\\n",
+    "\\cos(0) + C = 1 \\\\\n",
+    "1 + C = 1 \\\\\n",
+    "C = 0\n",
+    "$$"
    ]
   },
   {
